// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#multicast(targets, node) works 1`] = `
Object {
  "actions": Array [
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 0,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:0",
      "value": Object {
        "id": 0,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 1,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:1",
      "value": Object {
        "id": 1,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 2,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:2",
      "value": Object {
        "id": 2,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 3,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:3",
      "value": Object {
        "id": 3,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 4,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:4",
      "value": Object {
        "id": 4,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 5,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:5",
      "value": Object {
        "id": 5,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 6,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:6",
      "value": Object {
        "id": 6,
      },
    },
  ],
  "jobs": Array [
    Object {
      "body": Object {
        "messages": Array [
          Object {
            "id": 0,
          },
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
          Object {
            "id": 4,
          },
        ],
        "to": Array [
          "john",
          "wick",
          "dog",
        ],
      },
      "entry": "message/multicast",
      "threadId": "line:default:multicast",
    },
    Object {
      "body": Object {
        "messages": Array [
          Object {
            "id": 5,
          },
          Object {
            "id": 6,
          },
        ],
        "to": Array [
          "john",
          "wick",
          "dog",
        ],
      },
      "entry": "message/multicast",
      "threadId": "line:default:multicast",
    },
  ],
  "message": Array [
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 0,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 1,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 2,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 3,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 4,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 5,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 6,
      },
      "type": [Function],
    },
  ],
  "results": Array [
    Object {},
    Object {},
  ],
}
`;

exports[`#push(token, node) works 1`] = `
Object {
  "actions": Array [
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 0,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:0",
      "value": Object {
        "id": 0,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 1,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:1",
      "value": Object {
        "id": 1,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 2,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:2",
      "value": Object {
        "id": 2,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 3,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:3",
      "value": Object {
        "id": 3,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 4,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:4",
      "value": Object {
        "id": 4,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 5,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:5",
      "value": Object {
        "id": 5,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 6,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:6",
      "value": Object {
        "id": 6,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 7,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:7",
      "value": Object {
        "id": 7,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 8,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:8",
      "value": Object {
        "id": 8,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 9,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:9",
      "value": Object {
        "id": 9,
      },
    },
  ],
  "jobs": Array [
    Object {
      "body": Object {
        "messages": Array [
          Object {
            "id": 0,
          },
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
          Object {
            "id": 4,
          },
        ],
        "to": "john doe",
      },
      "entry": "message/push",
      "threadId": "line:default:user:john doe",
    },
    Object {
      "body": Object {
        "messages": Array [
          Object {
            "id": 5,
          },
          Object {
            "id": 6,
          },
        ],
        "to": "john doe",
      },
      "entry": "message/push",
      "threadId": "line:default:user:john doe",
    },
    Object {
      "body": undefined,
      "entry": "bar",
      "threadId": "line:default:user:john doe",
    },
    Object {
      "body": Object {
        "messages": Array [
          Object {
            "id": 8,
          },
        ],
        "to": "john doe",
      },
      "entry": "message/push",
      "threadId": "line:default:user:john doe",
    },
    Object {
      "body": Object {
        "id": 9,
      },
      "entry": "baz",
      "threadId": "line:default:user:john doe",
    },
  ],
  "message": Array [
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 0,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 1,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 2,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 3,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 4,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 5,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 6,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 7,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 8,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 9,
      },
      "type": [Function],
    },
  ],
  "results": Array [
    Object {},
    Object {},
    Object {},
    Object {},
    Object {},
  ],
}
`;

exports[`#reply(token, node) works 1`] = `
Object {
  "actions": Array [
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 0,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:0",
      "value": Object {
        "id": 0,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 1,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:1",
      "value": Object {
        "id": 1,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 2,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:2",
      "value": Object {
        "id": 2,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 3,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:3",
      "value": Object {
        "id": 3,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 4,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:4",
      "value": Object {
        "id": 4,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 5,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:5",
      "value": Object {
        "id": 5,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 6,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:6",
      "value": Object {
        "id": 6,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 7,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:7",
      "value": Object {
        "id": 7,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 8,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:8",
      "value": Object {
        "id": 8,
      },
    },
    Object {
      "asUnit": true,
      "element": Object {
        "$$typeof": Symbol(machinat.element),
        "props": Object {
          "id": 9,
        },
        "type": [Function],
      },
      "isPause": false,
      "path": "$:9",
      "value": Object {
        "id": 9,
      },
    },
  ],
  "jobs": Array [
    Object {
      "body": Object {
        "messages": Array [
          Object {
            "id": 0,
          },
          Object {
            "id": 1,
          },
          Object {
            "id": 2,
          },
          Object {
            "id": 3,
          },
          Object {
            "id": 4,
          },
        ],
        "replyToken": "__REPLY_TOKEN__",
      },
      "entry": "message/reply",
      "threadId": "line:default:unknown:__REPLY_TOKEN__",
    },
    Object {
      "body": Object {
        "messages": Array [
          Object {
            "id": 5,
          },
          Object {
            "id": 6,
          },
        ],
        "replyToken": "__REPLY_TOKEN__",
      },
      "entry": "message/reply",
      "threadId": "line:default:unknown:__REPLY_TOKEN__",
    },
    Object {
      "body": undefined,
      "entry": "bar",
      "threadId": "line:default:unknown:__REPLY_TOKEN__",
    },
    Object {
      "body": Object {
        "messages": Array [
          Object {
            "id": 8,
          },
        ],
        "replyToken": "__REPLY_TOKEN__",
      },
      "entry": "message/reply",
      "threadId": "line:default:unknown:__REPLY_TOKEN__",
    },
    Object {
      "body": Object {
        "id": 9,
      },
      "entry": "baz",
      "threadId": "line:default:unknown:__REPLY_TOKEN__",
    },
  ],
  "message": Array [
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 0,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 1,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 2,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 3,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 4,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 5,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 6,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 7,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 8,
      },
      "type": [Function],
    },
    Object {
      "$$typeof": Symbol(machinat.element),
      "props": Object {
        "id": 9,
      },
      "type": [Function],
    },
  ],
  "results": Array [
    Object {},
    Object {},
    Object {},
    Object {},
    Object {},
  ],
}
`;
